@@ -1,3 +1,4 @@
+	* improved web seed retry behavior
 	* fixed announce issue
 
 0.15.3 release
